# cifar100-speedrun

./: .gitignore  README.md  pyproject.toml
cifar10/: 01-resnet.py  02-bottleneck.py  03-preact.py  04-dawnnet.py  05-backbone.py  06-myrtle.py
cifar10/core/: config.py  gpuloader.py  modules.py  torchloader.py  trainer.py
research/: bench_utils.py  cropping.py  cutout.py  flip.py  ghostbn.py  loader.py  whiten.py
scripts/: 01-resnet.py  02-bottleneck.py  03-preact.py  04-baseline.py  04-dawnnet.py  05-backbone.py
